--- a/.github/workflows/render-figures.yml
+++ b/.github/workflows/render-figures.yml
@@ -33,7 +33,7 @@ jobs:
       # 4.  R packages
       - name: Install R packages
         run: |
-          Rscript -e 'install.packages(c("readr","dplyr","tidyr","ggplot2","cowplot","here"), repos="https://cloud.r-project.org")'
+          Rscript -e 'install.packages(c("readr","dplyr","tidyr","ggplot2","cowplot","here"，"knitr","rmarkdown"), repos="https://cloud.r-project.org")'
 
       # 5. render QMD
       - name: Render QMD
