--- a/.github/workflows/render-figures.yml
+++ b/.github/workflows/render-figures.yml
@@ -32,8 +32,11 @@ jobs:
 
       # 4.  R packages
       - name: Install R packages
-        run: |
-          Rscript -e 'install.packages(c("readr","dplyr","tidyr","ggplot2","cowplot","here"，"knitr","rmarkdown"), repos="https://cloud.r-project.org")'
+  run: |
+    Rscript -e 'install.packages(c(
+      "readr","dplyr","tidyr","ggplot2","cowplot","here",
+      "knitr","rmarkdown"
+    ), repos = "https://cloud.r-project.org")'
 
       # 5. render QMD
       - name: Render QMD
