Add Excel file to git and update documentation
- Allow 2025-07-15_ScopingReview_ReportedConcepts.xlsx in .gitignore
- Update README to reflect Excel file is now committed
- Update UPDATING_WEBSITE.md to clarify workflow requirements
- Add markdown formatting documentation for Excel users

--- a/.gitignore
+++ b/.gitignore
@@ -49,11 +49,12 @@ rsconnect/
 
 .DS_Store
 
-# Excel source files (synced from SharePoint/Teams)
-# CSVs are extracted programmatically and committed instead
+# Excel source files
+# Ignore all Excel files except the one needed for GitHub Actions
 data_raw/*.xlsx
 data_raw/*.xls
 data_raw/*.xlsm
+!data_raw/2025-07-15_ScopingReview_ReportedConcepts.xlsx
 
 # Hazel configuration with sensitive local paths
 R/HAZEL_SETUP.md
